[gd_scene load_steps=3 format=3 uid="uid://cu5b7h6rxpn2g"]

[ext_resource type="Script" path="res://UI/ui.gd" id="1_0bjfm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxkfc"]
bg_color = Color(0, 0, 0, 1)

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0bjfm")

[node name="Text_Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Hold_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = 560.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sxkfc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "   Voice:"
fit_content = true
tab_size = 5
context_menu_enabled = true
shortcut_keys_enabled = false

[node name="RichTextLabel2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
